Minor spacing fixes

--- a/dev/scss/_objects.faelskab.scss
+++ b/dev/scss/_objects.faelskab.scss
@@ -97,3 +97,7 @@ section.faelskab {
 @media (max-width: 480px) {
 	section.faelskab {
 		margin-top: 900px; }}
+
+@media (max-width: 400px) {
+	section.faelskab {
+		margin-top: 1000px; }}
