--- a/dev/scss/_objects.nhojsktilm.scss
+++ b/dev/scss/_objects.nhojsktilm.scss
@@ -69,5 +69,9 @@ button.close span {
 	font-size: 18px; }
 
 @media (max-width: 768px) {
+	.row-nhojsktilm_intro { padding-bottom: $dist-xxl; }
 	.whitebox-nhojsktilm { display: none; }
 	.nhojsktilm_tilm { top: 780px; }}
+
+@media (max-width: 480px) {
+	.nhojsktilm_tilm { top: 860px; }}
